# pytorch-tutorial

./: .gitignore  .gitingore  .gitpod.yml  README.md  model.ckpt  pyproject.toml  requirements.txt
logo/: README.md
tutorials/00 - PyTorch Basics/: basics.ipynb  main.py
tutorials/01 - Linear Regression/: main.py  model.pkl
tutorials/01-basics/feedforward_neural_network/: main-gpu.py  main.ipynb  main.py  temp-main_gpu.py  test.py
tutorials/01-basics/linear_regression/: main.ipynb  main.py
tutorials/02 - Logistic Regression/: main.py  model.pkl
tutorials/03 - Feedforward Neural Network/: main-gpu.py  main.py
tutorials/04 - Convolutional Neural Network/: main-gpu.py  main.py
tutorials/04-utils/tensorboard/: main.py  (+4 more)
tutorials/05 - Deep Residual Network/: main-gpu.py  main.py
tutorials/06 - Recurrent Neural Network/: main-gpu.py  main.py
tutorials/07 - Bidirectional Recurrent Neural Network/: main-gpu.py  main.py
tutorials/08 - Generative Adversarial Network/: main-gpu.py  main.py
tutorials/08 - Language Model/: data_utils.py  main-gpu.py  main.py
tutorials/09 - Image Captioning/: README.md  configuration.py  data.py  data_loader.py  download.sh  evaluate_model.ipynb  model.py  requirements.txt  resize.py  sample.py  train.py  vocab.py
tutorials/09 - Language Model/: main-gpu.py
tutorials/10 - Deep Q Network/: ReplayMemory.ipynb  dqn13.py
tutorials/10 - Generative Adversarial Network/: main-gpu.py  main.py
tutorials/11 - Deep Convolutional Generative Adversarial Network/: main-gpu.py  main.py
tutorials/11 - Deep Q Network/: Untitled.ipynb
(+41 files in other folders)
