[tool.poetry]
name = "pytorch-tutorial"
version = "0.1.0"
description = "PyTorch Tutorial for Deep Learning Researchers"
authors = ["Hikmat Samadov <s3m3dov@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
torchaudio = "^2.0.1"
torchvision = "^0.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
